--- a/six week/app/layout.ejs
+++ b/six week/app/layout.ejs
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <form action="Information.html" method="GET" class="goCheckout ml-auto">
+            <form action="information.html" method="GET" class="goCheckout ml-auto">
                 <input type="submit" class="btn btn-primary py-3 w-100 font-weight-bold" value="Checkout" name="submit">
             </form>
         </div>
